Fixed pagination button on mobile, too close to footer and also change colour to align with GHC's

--- a/wp-content/themes/greenhouseculture/style.css
+++ b/wp-content/themes/greenhouseculture/style.css
@@ -2338,7 +2338,6 @@ section.slider-wrapper {
     transform: scale(1.02);
 }
 
-/* universal thumbnail styling */
 .event-thumbnail img {
   width: 100%;
   height: 100%;
@@ -2641,7 +2640,7 @@ section.slider-wrapper {
     display: flex;
     justify-content: center;
     gap: 10px;
-    margin-top: 20px;
+    margin: 20px 0;
 }
 
 .pagination-past a,
@@ -2649,7 +2648,7 @@ section.slider-wrapper {
     display: inline-block;
     padding: 8px 12px;
     border-radius: 5px;
-    background-color: #c9c5c4; 
+    background-color: #598844; 
     color: #fff;
     text-decoration: none;
     font-weight: 600;
@@ -2657,11 +2656,11 @@ section.slider-wrapper {
 }
 
 .pagination-past a:hover {
-    background-color: #a39b99; /* darker shade on hover */
+    background-color: #7cbd60; /* darker shade on hover */
 }
 
 .pagination-past .current {
-    background-color: #9e9896; /* current page */
+    background-color: #7cbd60; /* current page */
 }
 
 
